yeni özellikler eklendi
